Append test
Signed-off-by: renaud colin <renaud.colin@inra.fr>